Fix bugs and optimize for mobile.

--- a/index.html
+++ b/index.html
@@ -4,12 +4,15 @@
 	<meta charset="utf-8">
 	<link rel="icon" href="img/octotrend.ico">
 	<link rel="stylesheet" type="text/css" href="main.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href='http://fonts.googleapis.com/css?family=Raleway:700,400,300' rel='stylesheet' type='text/css'>
 	<title>Octotrend</title>
 </head>
 <body>
 	<div id="logo">
-		<img src="img/octotrend.png" width="150">
+		<a href="">
+			<img src="img/octotrend.png" width="150">
+		</a>
 	</div>
 
 	<div id="title">
@@ -25,7 +28,7 @@
 	</div>
 
 	<div id="footer">
-		<p>Made with ❤ by Iterar <img src="img/iterar.png"></p>
+		<p>Made with ❤ by Iterar <a href="http://iterar.co"><img src="img/iterar.png"></a></p>
 	</div>
 </body>
 </html>
